# fanotify-cli

./: Cargo.toml
src/: c_enum.rs  flags.rs  main.rs
